--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FHICT_Companion_App_Group1</string>
+    <string name="app_name">FHICT Companion</string>
     <string name="showresults">ShowResults</string>
     <string name="textViewNewsAuthor">TextViewNewsAuthor</string>
     <string name="TextViewNewsTitle">TextViewNewsTitle</string>
@@ -29,5 +29,6 @@
     <string name="all_people_header">All teachers</string>
     <string name="textviewpublisheddate">textViewPublishedDate</string>
     <string name="courseDate">2021-10-11</string>
+    <string name="email">Email:</string>
 
 </resources>
